--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,11 @@
                 "input": "src/global.scss"
               }
             ],
-            "scripts": [],
+            "scripts": [
+              {
+                "input": "src/form.sw.js"
+              }
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
