service worker background sync, correções

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
               },
-              "src/manifest.json"
+              "src/manifest.json",
+              "src/form-sw.js"
             ],
             "styles": [
               {
@@ -40,11 +41,7 @@
                 "input": "src/global.scss"
               }
             ],
-            "scripts": [
-              {
-                "input": "src/form.sw.js"
-              }
-            ],
+            "scripts": [],
             "es5BrowserSupport": true
           },
           "configurations": {
