--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
+    "generate": "node ./src/app/generated-form/build-form.js",
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node ./src/app/generated-form/build-form.js && ng serve",
+    "build": "node ./src/app/generated-form/build-form.js && ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -27,6 +28,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
+    "ejs": "^2.6.1",
     "localforage": "^1.5.0",
     "ngforage": "^4.0.0",
     "rxjs": "~6.3.3",
