--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.1.0",
+    "@ionic/angular": "^4.4.2",
     "core-js": "^2.5.4",
     "ejs": "^2.6.1",
+    "googleapis": "^40.0.0",
     "localforage": "^1.5.0",
     "ngforage": "^4.0.0",
     "rxjs": "~6.3.3",
