Suporte a multiplos formulários

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,8 @@
 {
     "forms": [
-        {   "title": "Form Um",
+        {   
+            "id": "form1",
+            "title": "Form Um",
             "submit_button_text": "Enviar respostas",
             "questions": [
                 {
