--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "coleta-template",
+  "name": "pwaforms",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Felipe Marin",
+  "homepage": "https://github.com/felipe-marin/pwaforms/",
   "scripts": {
     "generate": "node ./src/app/generated-form/build-form.js",
     "ng": "ng",
@@ -12,6 +12,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "bin": "./bin/build-form.js",
   "private": true,
   "dependencies": {
     "@angular/common": "^7.2.2",
