--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
     "name": "App",
+    "short_name": "app",
+    "url": "",
     "google_sheets": true,
     "filename": "test sheet",
     "forms": [
