--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "App",
-    "short_name": "app",
+    "name": "Censo Escolar",
+    "short_name": "Censo Escolar",
     "theme_color": "#1976d2",
     "background_color": "#fafafa",
     "display": "standalone",
